# pasc2k

./: CMakeLists.txt  dependencies.cmake  project_options.cmake
cmake/: lto.cmake  sanitizers.cmake  warnings.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/: common.hpp
src/diagnostics/: CMakeLists.txt  colors.hpp  diagnostics.cpp
src/diagnostics/include/diagnostics/: diagnostics.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  token_type.cpp
src/lexer/include/lexer/: lexer.hpp  lexer_error.hpp  source_location.hpp  token.hpp  token_type.hpp
src/main/: CMakeLists.txt  main.cpp
src/parser/: CMakeLists.txt  parser.cpp  type_definition.cpp
src/parser/include/parser/: ast.hpp  ast_node.hpp  block.hpp  constant_definition.hpp  constant_definitions.hpp  identifier.hpp  identifier_list.hpp  integer_literal.hpp  label_declaration.hpp  label_declarations.hpp  literals.hpp  parser.hpp  parser_error.hpp  parser_note.hpp  type_definition.hpp  type_definitions.hpp  variable_declaration.hpp  variable_declarations.hpp
test/: CMakeLists.txt  block.pas  factorial.pas  lexer_tests.cpp  parser_tests.cpp
